--- a/.env
+++ b/.env
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=dbamriviagem.mysql.database.azure.com
 DB_PORT=3306
 DB_DATABASE=bag_a_bag
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=admin1
+DB_PASSWORD=Senai@115
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
