--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=dbamriviagem.mysql.database.azure.com
+DB_HOST=db-amri.mysql.database.azure.com
 DB_PORT=3306
 DB_DATABASE=bag_a_bag
 DB_USERNAME=admin1
